--- a/task2/index.html
+++ b/task2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1</title>
+    <title>Task 2</title>
 
     <link rel="stylesheet" href="global.css" />
 
@@ -17,6 +17,8 @@
   </head>
 
   <body>
+    <button id="theme-toggle">🌙 Dark Mode</button>
+
     <div class="product-container">
       <div class="product-card card-one">
         <div class="product-image">
