--- a/task3/form.html
+++ b/task3/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Create Account</title>
     <link rel="stylesheet" href="form.css" />
     <link
@@ -15,23 +16,20 @@
     <div class="wrapper">
       <div class="wave"></div>
 
-      <!-- LEFT SIDE -->
       <div class="left-box">
         <img
           src="https://www.allen.ac.in/apps2526/assets/images/reset-password.jpg"
-          width="120"
+          width="150"
         />
         <h1>Welcome</h1>
         <p>Lorem ipsum placeholder text for previewing visual mockups.</p>
       </div>
 
-      <!-- RIGHT SIDE -->
       <div class="right-box">
         <h2>Create your account</h2>
         <p class="subtitle">Join us today – it takes just a few moments</p>
 
         <form id="registerForm">
-          <!-- NAME -->
           <label>Name</label>
           <div class="input-group">
             <input id="firstName" type="text" placeholder="Enter your name" />
@@ -57,9 +55,7 @@
           <label>Password</label>
           <div class="input-group password-box">
             <input id="password" type="password" placeholder="Enter password" />
-            <span class="toggle">
-              <img src="https://img.icons8.com/ios/24/000000/visible.png" />
-            </span>
+
             <span class="error"></span>
           </div>
           <small class="helper"
@@ -75,9 +71,7 @@
               type="password"
               placeholder="Re-type password"
             />
-            <span class="toggle">
-              <img src="https://img.icons8.com/ios/24/000000/visible.png" />
-            </span>
+
             <span class="error"></span>
           </div>
 
@@ -85,17 +79,23 @@
           <button type="submit">Create Account</button>
         </form>
 
-        <h4 id="successMsg"></h4>
+        <div id="successModal" class="modal">
+          <div class="modal-content">
+            <div class="checkmark">✔</div>
+            <h3>Account Created!</h3>
+            <p>Your account has been registered successfully.</p>
+            <button id="closeModal">Continue</button>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- BRAND FOOTER -->
     <div class="brand">
       <img
         src="https://cdn.iconscout.com/icon/free/png-256/free-paypal-52-432525.png"
         width="28"
       />
-      <span>Brand</span>
+      <span>Hahuzon</span>
     </div>
 
     <script src="script.js" defer></script>
