--- a/task4/index.html
+++ b/task4/index.html
@@ -3,22 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 4 - Paginated Cards</title>
-    <link rel="stylesheet" href="task4.css" />
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="card1.css" />
+    <title>E-commerce UI</title>
+
+    <link rel="stylesheet" href="components/side.css" />
+    <link rel="stylesheet" href="components/nav.css" />
+    <link rel="stylesheet" href="components/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="components/card1.css" />
   </head>
   <body>
-    <h1 class="title">Public Posts</h1>
+    <div id="navbar"></div>
 
-    <div id="card-container" class="card-container"></div>
-
-    <div class="pagination">
-      <button id="prevBtn">Prev</button>
-      <span id="page-indicator">1 / 2</span>
-      <button id="nextBtn">Next</button>
+    <div class="layout">
+      <div id="sidebar"></div>
+      <div id="main"></div>
     </div>
 
-    <script src="task4.js"></script>
+    <script>
+      async function loadComponent(id, file) {
+        const res = await fetch(file);
+        document.getElementById(id).innerHTML = await res.text();
+      }
+
+      loadComponent("sidebar", "components/side.html");
+      loadComponent("navbar", "components/nav.html");
+      loadComponent("main", "components/main.html");
+    </script>
+
+    <script src="components/side.js"></script>
+    <script src="components/nav.js"></script>
+    <script src="components/main.js"></script>
   </body>
 </html>
