--- a/task6/index.html
+++ b/task6/index.html
@@ -60,12 +60,12 @@
       w3.includeHTML();
     </script>
 
-    <div w3-include-html="components/featuresplit.html"></div>
+    <div w3-include-html="components/all.html"></div>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <script>
       w3.includeHTML();
     </script>
-
+    <!-- 
     <div w3-include-html="components/feature.html"></div>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <script>
@@ -76,7 +76,7 @@
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     <script>
       w3.includeHTML();
-    </script>
+    </script> -->
 
     <div w3-include-html="components/testmony.html"></div>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
