--- a/task5/index.html
+++ b/task5/index.html
@@ -210,7 +210,7 @@
               </a>
 
               <img
-                src="https://img.freepik.com/premium-vector/handdrawn-curved-arrow-left_850574-565.jpg"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXYV9vRpJDBStehWUeFw8fk6NHHMbHAejo4A&s"
                 class="block absolute sm:block absolute -right-4 -top-12 md:-right-1 md:-top-14 lg:left-[400px] lg:-top-[55px] w-12 sm:w-10 md:w-20 opacity-90 pointer-events-none select-none"
               />
             </div>
