--- a/task4/index.html
+++ b/task4/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="components/card1.css" />
   </head>
   <body>
@@ -26,6 +31,10 @@
       async function loadComponent(id, file) {
         const res = await fetch(file);
         document.getElementById(id).innerHTML = await res.text();
+
+        if (id === "main") {
+          initMainScript();
+        }
       }
 
       loadComponent("sidebar", "components/side.html");
